<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/check"
        android:title="@string/done"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_insert_image"
        android:icon="@drawable/image_insert"
        android:title="@string/insert_image"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_insert_image_url"
                android:title="@string/insert_image_url"
                />
            <item
                android:id="@+id/action_insert_image_upload"
                android:title="@string/insert_image_upload"
                />
        </menu>

    </item>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save"
        android:title="@string/save"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_publish"
        android:title="@string/publish"
        app:showAsAction="never"
        />

    <!--<item-->
        <!--android:id="@+id/action_discard"-->
        <!--android:title="@string/discard_changes"-->
        <!--app:showAsAction="never"-->
        <!--/>-->

</menu>
