<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.PostViewActivity">

    <item
        android:id="@+id/action_publish"
        android:title="@string/publish"
        android:orderInCategory="1"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_post_settings"
        android:title="@string/post_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="99"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_view_post"
        android:title="@string/view_post_on_blog"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_unpublish"
        android:title="@string/unpublish"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_draft"
        app:showAsAction="never"
        />

</menu>
